dosc:add header and main

--- a/index.html
+++ b/index.html
@@ -6,9 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&family=Tiro+Devanagari+Sanskrit&display=swap" rel="stylesheet">
     <title>cv</title>
 </head>
 <body>
- <p>Hello</p>
+ <header class="header">
+    <div class="container">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#about me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="languages" class="nav-link">Languages</a></li>
+                    <li class="nav-item"><a href="certificates" class="nav-link">Certificates</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+ </header>
+ <main class="main">
+    <div class="container">
+        <section class="section" id="profile">
+            <h1 class="section-title">Aliaksandr Zykin</h1>
+        </section>
+        <section class="section" id="contacts">
+            <h2 class="section-title">Contacts</h2>
+        </section>
+        <section class="section" id="about me">
+            <h2 class="section-title">About me</h2>
+        </section>
+        <section class="section" id="skills">
+            <h2 class="section-title">Skills</h2>
+        </section>
+        <section class="section" id="education">
+            <h2 class="section-title">Education</h2>
+        </section>
+        <section class="section" id="languages">
+            <h2 class="section-title">Languages</h2>
+        </section>
+        <section class="section" id="certificates">
+            <h2 class="section-title">Certificates</h2>
+        </section>
+    </div>
+ </main>
+ <footer class="footer">
+    <div class="container"></div>
+ </footer>
 </body>
 </html>
